manifests/despliegue/tekton1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton1
  name: tekton1
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tekton1
