manifests/despliegue/tekton1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
spec:
  rules:
  - host: www.argocd-tekton.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton1
            port:
              number: 80
